used maxcdn to host bootstrap without internet will page load col class when i am connected?

--- a/Zozor/style/style.css
+++ b/Zozor/style/style.css
@@ -1,77 +1,117 @@
-@font-face
-{
+@font-face {
     font-family: 'BallparkWeiner';
     src: url('fonts/ballpark.eot');
-    src: url('fonts/ballpark.eot?#iefix') format('embedded-opentype'),
-         url('fonts/ballpark.woff') format('woff'),
-         url('fonts/ballpark.ttf') format('truetype'),
-         url('fonts/ballpark.svg#BallparkWeiner') format('svg');
+    src: url('fonts/ballpark.eot?#iefix') format('embedded-opentype'), url('fonts/ballpark.woff') format('woff'), url('fonts/ballpark.ttf') format('truetype'), url('fonts/ballpark.svg#BallparkWeiner') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
-@font-face
-{
+@font-face {
     font-family: 'Dayrom';
     src: url('fonts/dayrom.eot');
-    src: url('fonts/dayrom.eot?#iefix') format('embedded-opentype'),
-         url('fonts/dayrom.woff') format('woff'),
-         url('fonts/dayrom.ttf') format('truetype'),
-         url('fonts/dayrom.svg#Dayrom') format('svg');
+    src: url('fonts/dayrom.eot?#iefix') format('embedded-opentype'), url('fonts/dayrom.woff') format('woff'), url('fonts/dayrom.ttf') format('truetype'), url('fonts/dayrom.svg#Dayrom') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 body{
-	background: url('images/yellow_background.png');
+    background: url('images/yellow_background.png');
     font-family: 'Trebuchet MS', Arial, sans-serif;
     color: #181818;
-	}
+
+}
 
 .main_wrapper{
-	width: 900px;
-	margin:auto;
+    width: 900px;
+    margin: auto;
+
 }
-header{
-	background: url('images/line.png') repeat-x bottom;
+#logo {
+    float: left;
 }
-#main_title{
+
+header {
+    background: url('images/line.png') repeat-x bottom;
+}
+
+
+
+header h1 {
+    font-family: BallparkWeiner, serif;
+    font-size: 2.5em;
+
+}
+
+header h4 {
+    clear: both;
+    margin-top: 0;
+}
+
+h3,
+nav a {
+    font-family: Dayrom, serif;
+    padding-bottom: 3px;
+    text-decoration:none;
+}
+
+
+nav{
 	display: inline-block;
-}
-header h1{
-	font-family: BallparkWeiner, serif;
-	font-size: 2.5em;
-}
-header h4{
-	clear: right;
-}
-h3, nav a{
-	font-family: Dayrom, serif;
-
+	width: 740px;
+	text-align: right;
 }
 
-#logo, header h1{
-	display: inline-block;
-	margin-bottom: 0px;
+ul li{
+	list-style: none;
+    float: right;
+    padding-right: 5px;
+}
+nav a:hover
+{
+    color: #760001;
+    border-bottom: 3px solid #760001;
 }
 
-.logo{
+#bannerimage {
+	margin-top: 15px;
+    height: 200px;
+    width: 100%;
+    background: url('images/sanfrancisco.jpg') no-repeat;
+    position: relative;	
+    border-radius: 15px ;
+    box-shadow: 5px 8px 8px #A4B3F2;
+}
+
+#banner_description {
+	height: 33px;
+	width: 99.5%;
+	color: white;
+	padding: 8px;
+	position: absolute;
+	bottom: 0;
+	background-color: rgb(24,24,24);
+    background-color: rgba(24,24,24,0.8);
+
+}
+article{
+	width: 70%;
+}
+aside{
+	background: #8D8B7C;
+	width: 30%;
+	float: right;
+	padding: 7px;
+	color: white;
+}
+#arrow{
 	float: left;
 }
-
-li{
-	float: right;
-	display: inline;
-	padding: 5px;
-
-}
-#bannerimage{
-	height: 400px;
-	background: url('images/sanfrancisco.jpg') no-repeat center;
-}
-#banner_description{
+.footer{
 	clear: both;
-	position: relative;
-	z-index: 1;
+	display: block;
+	background: #EBE17A;
+}
+.foot{
+	display: inline-block;
 
 }
